# AAI-Asessment3-JaydonDeale

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
funcs/: audio.py  face.py  startup.py  ui.py  utils.py
