[project]
name = "assess3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepface>=0.0.95",
    "face-recognition>=1.3.0",
    "face-recognition-models",
    "opencv-python>=4.12.0.88",
]

[tool.uv.sources]
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }
